# ChangeLog for x11-plugins/wmnetload
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmnetload/ChangeLog,v 1.31 2010/12/02 15:33:38 flameeyes Exp $

  02 Dec 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  wmnetload-1.3-r3.ebuild:
  Don't force the use of automake-1.4 (works fine with 1.11), also fix calls to
  autotools.eclass interfaces.

  12 Apr 2010; Michael Sterrett <mr_bones_@gentoo.org>
  wmnetload-1.3-r3.ebuild:
  allow any rev of automake-1.4_p6 to avoid dep breakage

*wmnetload-1.3-r3 (22 Jan 2009)

  22 Jan 2009; Michele Noberasco <s4t4n@gentoo.org> wmnetload-1.3-r3.ebuild:
  Revision bump, with updated norpath patch to fix bug #226853.
  Also, now libdockapp 0.5 support patch is obsolete and not applied any longer.

  06 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  15 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  wmnetload-1.3-r2.ebuild:
  Fixed DEPEND for libdockapp.

  09 Jan 2006; Daniel Black <dragonheart@gentoo.org>
  +files/wmnetload-1.3-norpath.patch, wmnetload-1.3-r2.ebuild:
  rpath fix as per bug #107703. Thanks Weeve

  11 Nov 2005; Michele Noberasco <s4t4n@gentoo.org> wmnetload-1.3-r2.ebuild:
  Removed COPYING and INSTALL from dodoc.

*wmnetload-1.3-r2 (26 Sep 2005)

  26 Sep 2005; Michele Noberasco <s4t4n@gentoo.org> wmnetload-1.3-r2.ebuild:
  Revision bump, directly as stable, updating libdockapp dependancy. Closes bug #104903 and bug #105530.

  30 Aug 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  wmnetload-1.3-r1.ebuild:
  Stable on sparc

  28 Dec 2004; Michael Sterrett <mr_bones_@gentoo.org> -wmnetload-1.3.ebuild:
  clean old broken ebuild

  24 Nov 2004; Jason Wever <weeve@gentoo.org> wmnetload-1.3-r1.ebuild:
  Added ~sparc keyword.

  19 Oct 2004; Dylan Carlson <absinthe@gentoo.org> wmnetload-1.3-r1.ebuild:
  Stable on amd64.

  02 Sep 2004; Tom Gall <tgall@gentoo.org> wmnetload-1.3-r1.ebuild: