@@ -1,6 +1,9 @@
 # ChangeLog for x11-plugins/wmnetload
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmnetload/ChangeLog,v 1.31 2010/12/02 15:33:38 flameeyes Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmnetload/ChangeLog,v 1.32 2012/02/02 17:45:34 ago Exp $
+
+  02 Feb 2012; Agostino Sarubbo <ago@gentoo.org> wmnetload-1.3-r3.ebuild:
+  Stable for amd64, wrt bug #397293
 
   02 Dec 2010; Diego E. Pettenò <flameeyes@gentoo.org>
   wmnetload-1.3-r3.ebuild:
